--- a/docs/人工智能.md
+++ b/docs/人工智能.md
@@ -1,108 +1,240 @@
----
-title: 人工智能
-tags: 
-renderNumberedHeading: true
-grammar_cjkRuby: true
----
+# 人工智能
 ## 人脸检测
+<img src="./images/人脸检测.png"  style="width: 120px;height: 50px;" title="face detection"> 
 
-|指令     |    功能 |
-| --- | --- |
-|![face detection *=120x50*](./images/人脸检测.png)     |  使用视频侦测模块中的开启摄像头指令，打开电脑摄像头，检测人脸的特征。   |
-|    ![face detection *=150x80*](./images/检测完成触发事件.png) | 当人脸检测完成后，触发对应事件。    |
-|   ![face detection *=200x50*](./images/是否有人判断.png)  |   判断是否检测到人脸，检测到返回值为true，未检测到返回值为false。  |
-| ![face detection *=200x200*](./images/人脸属性.png)    |   通过人脸检测，可以检测到年龄、性别、表情特征。  |
+功能：使用视频侦测模块中的开启摄像头指令，打开电脑摄像头，检测人脸的特征。
+<hr>
+<img src="./images/检测完成触发事件.png"  style="width: 150px;height: 80px;" title="face detection">
 
-|参考程序 |    说明 |
-| --- | --- |
-|  ![enter description here](./images/人脸检测案例.png)  |  <center>点击绿旗，人脸检测完成后，小度音箱播报检测到的年龄。 </center> |
+功能：当人脸检测完成后，触发对应事件。
+<hr>
+<img src="./images/是否有人判断.png"  style="width: 200px;height: 50px;" title="face detection">
 
+功能：判断是否检测到人脸，检测到返回值为true，未检测到返回值为false。
+<hr>
+<img src="./images/人脸属性.png"  style="width: 200px;height: 200px;" title="face detection">
+
+功能：通过人脸检测，可以检测到年龄、性别、表情特征。 
+<hr>
+<img src="./images/人脸检测案例.png"style="width: 450px;height: 250px;"  title="face detection">
+
+参考案例说明：点击绿旗，人脸检测完成后，小度音箱播报检测到的年龄。
+<hr>
 
 ## 人脸搜索
-|指令     |    功能 |
-| --- | --- |
-|  ![face recognition *=300x50*](./images/创建人脸组.png) |  首先创建一个人脸组，为添加人脸到组做准备。 人脸组的名称可以自己定义，相同名称的人脸组只需要新建一次。  |
-|  ![face recognition *=300x40*](./images/添加人脸到组.png) | 将人脸添加到提前建好的人脸组中，确保摄像头打开，并正对摄像头。第一个参数填写添加的人脸对应的姓名。第二个参数填写组名。在人脸组中添加过的人脸会被保存。    |
-| ![face recognition *=300x50*](./images/搜索人脸.png)   |  在对应的人脸组里搜索摄像头前的人脸，确保摄像头打开，并正对摄像头 。 |
-|  ![face recognition *=150x70*](./images/搜索完成事件.png)  |   当人脸搜索完成后，执行对应的事件。  |
-| ![face recognition *=200x50*](./images/人脸搜索结果.png)|   返回人脸搜索后得到的姓名。  |
 
-|参考程序 |    说明 |
-| --- | --- |
-| ![face recognition](./images/人脸搜索案例.png) |  <center>点击绿旗后，在group_1组中搜索人脸，当搜索完成后，如果搜索到的姓名等于自己的名字，小度音箱播报：欢迎回家。 </center> |
+<img src="./images/创建人脸组.png"  style="width: 300px;height: 60px;" title="face recognition"> 
+
+功能：首先创建一个人脸组，为添加人脸到组做准备。 人脸组的名称可以自己定义，相同名称的人脸组只需要新建一次。
+<hr>
+<img src="./images/添加人脸到组.png"  style="width: 300px;height: 60px;" title="face recognition">
+
+功能：将人脸添加到提前建好的人脸组中，确保摄像头打开，并正对摄像头。第一个参数填写添加的人脸对应的姓名。第二个参数填写组名。在人脸组中添加过的人脸会被保存。
+<hr>
+<img src="./images/搜索人脸.png"  style="width: 300px;height: 60px;" title="face recognition">
+
+功能：在对应的人脸组里搜索摄像头前的人脸，确保摄像头打开，并正对摄像头 。
+<hr>
+<img src="./images/搜索完成事件.png"  style="width: 150px;height: 70px;" title="face recognition">
+
+功能:当人脸搜索完成后，执行对应的事件。  
+<hr>
+<img src="./images/人脸搜索结果.png"  style="width: 200px;height: 50px;" title="face recognition">
+
+功能：返回人脸搜索后得到的姓名。
+<hr>
+<img src="./images/人脸搜索案例.png" style="width: 300px;height: 300px;" title="face recognition">
+
+参考案例说明：点击绿旗后，在group_1组中搜索人脸，当搜索完成后，如果搜索到的姓名等于自己的名字，小度音箱播报：欢迎回家。
 
 ## 人脸关键点
-|指令     |    功能 |
-| --- | --- |
-| ![keypoint *=150x50*](./images/人脸关键点检测.png)|    启动人脸关键点检测功能，确保摄像头打开，人脸位于摄像头前。|
-|![keypoint *=150x50*](./images/停止检测.png) |   停止人脸关键点检测功能，舞台区人脸关键点会消失。 |
-|![keypoint *=150x30*](./images/表情自信值_1.png)|置信度，获取当前人脸最可能的表情可信度。
-| ![keypoint *=200x30*](./images/关键部位位置.png)| 获取鼻尖,鼻根,下巴,左眼外角,左眼内角,右眼外角,右眼内角,嘴中心,嘴左角,嘴右角,左脸最外,右脸最外的X,Y坐标值。   |
-|![keypoint *=200x40*](./images/表情结果判断.png)|  判断人脸表情。  |
-|![keypoint *=150x40*](./images/表情结果值_1.png)|  获取人脸表情值结果。  |
-  |![keypoint *=150x40*](./images/人脸相似度.png)|   获取当前检测是人脸的可能性。 |
-  
-  |参考程序 |    说明 |
-| --- | --- |
-|![keypoint](./images/关键点位置案例.png)|  <center>人脸关键点检测完成后，实现角色跟随鼻尖上下移动。 </center> |
-|![keypoint](./images/关键点表情案例.png)|  <center>人脸关键点检测完成后，利用检测到的表情值做判断，当表情值是愤怒时，小度音箱播报：笑一笑，十年少。 </center> |
-  
-  ## 语音识别
-  |指令     |    功能 |
-| --- | --- |
-| ![speech recognition *=150x40*](./images/语音输入.png) |  需要语音输入时使用，参数输入时长可以根据情况更改。 |
-|![speech recognition *=200x80*](./images/当识别到语音事件.png) | 当识别任意语音后，执行对应的事件。  |
-| ![speech recognition *=200x80*](./images/当听到指定语音事件.png) |  当识别到规定的语音后，执行对应的事件。 |
-|![speech recognition *=150x40*](./images/语音结果.png)  |  获取语音识别的结果。 |
 
- |参考程序 |    说明 |
-| --- | --- |
-|![speech recognition](./images/语音识别案例.png)|  <center>点击绿旗后，语音输入：转起来，输入时间为3秒。当识别到正确的内容后，角色右转一圈。 </center> |
+<img src="./images/人脸关键点检测.png"  style="width: 150px;height: 50px;" title="keypoint"> 
+
+功能：启动人脸关键点检测功能，确保摄像头打开，人脸位于摄像头前。
+<hr>
+<img src="./images/停止检测.png"  style="width: 120px;height: 45px;" title="keypoint">
+
+功能：停止人脸关键点检测功能，舞台区人脸关键点会消失。
+<hr>
+<img src="./images/表情自信值.png"  style="width: 150px;height: 35px;" title="keypoint"> 
+
+功能：置信度，获取当前人脸最可能的表情可信度。
+<hr>
+<img src="./images/关键部位位置.png"  style="width: 200px;height: 35px;" title="keypoint">
+
+功能：获取鼻尖,鼻根,下巴,左眼外角,左眼内角,右眼外角,右眼内角,嘴中心,嘴左角,嘴右角,左脸最外,右脸最外的X,Y坐标值。  
+<hr>
+<img src="./images/表情结果判断.png"  style="width: 200px;height: 40px;" title="keypoint">
+
+功能：判断人脸表情。
+<hr>
+<img src="./images/表情结果值.png"  style="width: 150px;height: 40px;" title="keypoint">
+
+功能：获取人脸表情值结果。
+<hr>
+<img src="./images/人脸相似度.png"  style="width: 150px;height: 40px;" title="keypoint">
+
+功能：获取当前检测是人脸的可能性。
+<hr>
+<img src="./images/关键点位置案例.png"   style="width: 300px;height: 170px;"title="keypoint">
+
+参考案例说明：人脸关键点检测完成后，实现角色跟随鼻尖上下移动。
+<hr>
+<img src="./images/关键点表情案例.png"   style="width: 300px;height: 200px;"title="keypoint">
+
+参考案例说明：人脸关键点检测完成后，利用检测到的表情值做判断，当表情值是愤怒时，小度音箱播报：笑一笑，十年少。
+
+## 语音识别
+
+<img src="./images/语音输入.png"  style="width: 150px;height: 50px;" title="speech recognition"> 
+
+功能： 需要语音输入时使用，参数输入时长可以根据情况更改。
+<hr>
+<img src="./images/当识别到语音事件.png"  style="width: 200px;height: 80px;" title="speech recognition">
+
+功能：当识别任意语音后，执行对应的事件。
+<hr>
+<img src="./images/当听到指定语音事件.png"  style="width: 200px;height: 80px;" title="speech recognition">
+
+功能： 当识别到规定的语音后，执行对应的事件。
+<hr>
+<img src="./images/语音结果.png"  style="width: 150px;height: 40px;" title="speech recognition">
+
+功能：获取语音识别的结果。
+<hr>
+<img src="./images/语音识别案例.png" style="width: 200px;height: 300px;"  title="speech recognition"> 
+
+参考案例说明：点击绿旗后，语音输入：转起来，输入时间为3秒。当识别到正确的内容后，角色右转一圈。
 
 ## 口罩检测
-  |指令     |    功能 |
-| --- | --- |
-|![mask *=200x50*](./images/规定使用摄像头.png) |  选择摄像头。 |
-| ![mask *=300x50*](./images/手机摄像头.png)| 使用手机摄像头。 |
-|  ![mask *=150x50*](./images/电脑摄像头.png)|  使用电脑摄像头。 |
-| ![mask *=120x50*](./images/口罩检测.png) | 进行口罩检测，检测前需要确保摄像头打开。  |
-|![mask *=200x50*](./images/口罩人数触发事件.png) |  口罩检测完成后，识别到对应的戴口罩人数时，触发事件。可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。 |
-|![mask *=300x50*](./images/口罩人数检测条件.png) | 口罩检测完成后，用来判断当前戴口罩的人数，可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。  |
-| ![mask *=150x50*](./images/口罩结果.png)|  获取口罩检测的结果，可能的结果有：全体戴口罩、部分戴口罩、无人戴口罩。 |
-|![mask *=150x50*](./images/人脸个数.png) |获取口罩检测时的人脸个数。   |
 
- |参考程序 |    说明 |
-| --- | --- |
-|![enter description here](./images/口罩检测案例.png)|  <center>点击绿旗后，进行口罩检测，当检测结果为全体戴口罩时，显示“全体戴口罩”。 </center> |
+<img src="./images/规定使用摄像头.png"  style="width: 200px;height: 50px;" title="mask"> 
+
+功能：选择摄像头。 
+<hr>
+<img src="./images/手机摄像头.png"  style="width: 300px;height: 50px;" title="mask">
+
+功能：使用手机摄像头。
+<hr>
+<img src="./images/电脑摄像头.png"  style="width: 150px;height: 50px;" title="mask">
+
+功能：使用电脑摄像头。
+<hr>
+<img src="./images/口罩检测.png"  style="width: 120px;height: 50px;" title="mask">
+
+功能：进行口罩检测，检测前需要确保摄像头打开。
+<hr>
+<img src="./images/口罩人数触发事件.png"  style="width: 200px;height: 50px;" title="mask">
+
+功能：口罩检测完成后，识别到对应的戴口罩人数时，触发事件。可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。
+<hr>
+<img src="./images/口罩人数检测条件.png"  style="width: 300px;height: 50px;" title="mask">
+
+功能：口罩检测完成后，用来判断当前戴口罩的人数，可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。
+<hr>
+<img src="./images/口罩结果.png"  style="width: 150px;height: 50px;" title="mask">
+
+功能：获取口罩检测的结果，可能的结果有：全体戴口罩、部分戴口罩、无人戴口罩。
+<hr>
+<img src="./images/人脸个数.png"  style="width: 150px;height: 50px;" title="mask">
+
+功能：获取口罩检测时的人脸个数。
+<hr>
+<img src="./images/口罩检测案例.png"  style="width: 350px;height: 250px;" title="mask"> 
+
+参考案例说明：点击绿旗后，进行口罩检测，当检测结果为全体戴口罩时，显示“全体戴口罩”。
 
 ## 文字识别
-|指令     |    功能 |
-| --- | --- |
-|![character recognition *=200x50*](./images/选择摄像头文字识别.png)|  选择摄像头。 |
-|![character recognition  *=150x50*](./images/电脑摄像头文字识别.png)|  选择电脑摄像头。 |
-|![character recognition *=300x50* ](./images/手机摄像头文字识别.png)|  选择手机摄像头。 |
-|![character recognition *=200x50*](./images/文字识别.png)|  进行文字识别，注意需要打开摄像头镜像模式，才能识别出正确的结果。 |
-|![character recognition *=200x50*](./images/车牌识别.png)|进行车牌识别，需使用真实的车牌或车牌图片进行识别 。  |
-|![character recognition *=180x80*](./images/文字识别事件.png)|   当文字识别或车牌识别完成后，触发对应的事件。|
-|![character recognition *=150x50*](./images/文字识别结果.png)| 获取文字识别的结果。  |
-|![character recognition *=150x50*](./images/车牌识别结果.png)|   获取车牌识别的结果。|
 
- |参考程序 |    说明 |
-| --- | --- |
-|![enter description here](./images/文字识别案例.png)|  <center>点击绿旗后，使用电脑摄像头进行文字识别，当文字识别完成后，如果识别的结果为cat，那么播放cat音效。</center> |
+<img src="./images/选择摄像头文字识别.png"  style="width: 200px;height: 50px;" title="character recognition"> 
+
+功能：选择摄像头。
+<hr>
+<img src="./images/电脑摄像头文字识别.png"  style="width: 150px;height: 50px;" title="character recognition">
+
+功能：选择电脑摄像头。 
+<hr>
+<img src="./images/手机摄像头文字识别.png"  style="width: 300px;height: 45px;" title="character recognition">
+
+功能：选择手机摄像头。
+<hr>
+<img src="./images/文字识别.png"  style="width: 200px;height: 50px;" title="character recognition">
+
+功能：进行文字识别，注意需要打开摄像头镜像模式，才能识别出正确的结果。
+<hr>
+<img src="./images/车牌识别.png"  style="width: 200px;height: 50px;" title="character recognition">
+
+功能：进行车牌识别，需使用真实的车牌或车牌图片进行识别 。
+<hr>
+<img src="./images/文字识别事件.png"  style="width:180px;height: 80px;" title="character recognition">
+
+功能：当文字识别或车牌识别完成后，触发对应的事件。
+<hr>
+<img src="./images/文字识别结果.png"  style="width:150px;height: 50px;" title="character recognition">
+
+功能：获取文字识别的结果。
+<hr>
+<img src="./images/车牌识别结果.png"  style="width:150px;height: 50px;" title="character recognition">
+
+功能： 获取车牌识别的结果。
+<hr>
+<img src="./images/文字识别案例.png"  style="width:300px;height: 320px;" title="character recognition">
+
+参考案例说明：点击绿旗后，使用电脑摄像头进行文字识别，当文字识别完成后，如果识别的结果为cat，那么播放cat音效。
 
 ## 手势识别
-|指令     |    功能 |
-| --- | --- |
-|![gesture recognition *=200x50*](./images/选择摄像头文字识别.png)|  选择摄像头。 |
-|![gesture recognition   *=150x50*](./images/电脑摄像头文字识别.png)|  选择电脑摄像头。 |
-|![gesture recognition  *=300x50* ](./images/手机摄像头文字识别.png)|  选择手机摄像头。
-|![gesture recognition  *=140x60* ](./images/手势识别.png)|进行手势识别，确保摄像头打开。  |
-|![gesture recognition  *=150x50* ](./images/手势识别结果.png)| 获取手势识别的结果。 |
-|![gesture recognition  *=130x60*](./images/手势识别事件.png)| 当手势识别完成后，触发对应的事件。 |
 
- |参考程序 |    说明 |
-| --- | --- |
-|![enter description here](./images/手势案例.png)|  <center>点击绿旗后，使用电脑摄像头进行手势识别，识别完成后，判断如果是ok的手势，LED彩光灯打开。</center> |
+<img src="./images/选择摄像头文字识别.png"  style="width: 200px;height: 50px;" title="gesture recognition"> 
+
+功能：选择摄像头。
+<hr>
+<img src="./images/电脑摄像头文字识别.png"  style="width: 150px;height: 50px;" title="gesture recognition">
+
+功能：选择电脑摄像头。
+<hr>
+<img src="./images/手机摄像头文字识别.png"  style="width: 300px;height: 50px;" title="gesture recognition">
+
+功能：选择手机摄像头。
+<hr>
+<img src="./images/手势识别.png"  style="width: 140px;height: 60px;" title="gesture recognition">
+
+功能：进行手势识别，确保摄像头打开。
+<hr>
+<img src="./images/手势识别结果.png"  style="width: 150px;height: 50px;" title="gesture recognition">
+
+功能：获取手势识别的结果。
+<hr>
+<img src="./images/手势识别事件.png"  style="width: 130px;height:60px;" title="gesture recognition">
+
+功能：当手势识别完成后，触发对应的事件。
+<hr>
+<img src="./images/手势案例.png"   style="width: 250px;height:250px;"  title="gesture recognition">
+
+参考案例说明：点击绿旗后，使用电脑摄像头进行手势识别，识别完成后，判断如果是ok的手势，LED彩光灯打开。
 
 ## 图像分类
+
+<img src="./images/打开学习窗口.png"  style="width: 190px;height:200px;" title="image classification"> 
+
+功能：点击打开图像窗口学习背景和物品。
+<hr>
+<img src="./images/学习背景.jpg"  style="width: 300px;height:220px;" title="image classification">
+
+功能：点击"学习"采集背景以及物品的样本，每个分类采集的样本数量越多，结果越准确。名称分类1可修改成物品的名称。
+<hr>
+<img src="./images/图像分类置信度区间.png"  style="width: 130px;height:42px;" title="image classification">
+
+功能：机器学习完毕后使用，存储当前摄像头前是某个物品或背景的置信度值。
+<hr>
+<img src="./images/识别结果判断.png"  style="width: 150px;height:42px;" title="image classification">
+
+功能：用来判断识别结果是否为背景或某个物体，条件成立返回true，不成立返回false。
+<hr>
+<img src="./images/识别结果.png"  style="width: 135px;height:45px;" title="image classification">
+
+功能：存放机器学习后，当前识别到的背景或物体的名称。
+<hr>
+<img src="./images/图像分类案例.png"  style="width: 300px;height:300px;" title="image classification">
+
+参考案例说明：机器学习兔子的外观，并进入识别。当点击“绿旗”后，语音输入“rabbit”，如果当前机器学习后识别的结果为小兔子，播放胜利音效。
