--- a/docs/米家智能设备添加步骤.md
+++ b/docs/米家智能设备添加步骤.md
@@ -1,20 +1,24 @@
 #  米家智能设备添加步骤
 
 # 准备工作
+
+![smart home ](./images/米家智能家居套件.png) 
+
 1.米家智能家居套装（小米网关、小米门窗传感器、小米开关、人体红外传感器）
-![smart home ](./images/米家智能家居套件.png)
+
 2.米家APPv5.x（Android）
 
 	1）米家APP需要安装6.0以下的版本，最新的米家安装包（6.0及以上）无法获取token，将无法使用局域网通信。
 	2）在手机应用商城或应用管理中关闭米家APP的自动更新，避免自动更新为最新版本。
 
 # 添加网关步骤
+<img src="./images/配置小米网关.jpg"  style="width: 200px;height: 400px;" title="smart home"> 
+
 1.将小米多功能网关插到插座上，在未配置或者未联网状态下，小米多功能网关灯会一直闪烁。
-2.打开米家APP，点击右上角“加号”图标，添加设备，如下图所示:
-<img src="./images/配置小米网关.jpg"  style="width: 200px;height: 400px;" title="smart home">
 
+2.打开米家APP，点击右上角“加号”图标，添加设备，如上图所示:
+<hr>
 3.添加的方式有两种：
-
 1）APP自动扫描后添加
 <img src="./images/配置小米网关-自动扫描.jpg"  style="width: 200px;height: 400px;" title="smart home">
 	
