--- a/docs/智能家居.md
+++ b/docs/智能家居.md
@@ -56,13 +56,14 @@
 
 <br />
 
-## dlna设备发现说明  
+## 设备发现说明  
 
-	dlna可自动发现局域网内的小狮网关信息,加载智能家居插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可与小狮网关建立连接。进行相应的智能硬件操作。
+	在使用智能家居模块前，首先需要连接小狮网关。在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可与小狮网关建立连接。进行相应的智能硬件操作。
 
-### dlna扫描发现
-
-![smart_home](images/智能家居/smart_home_dlna_scan.png)
+### 扫描发现
+<img src="./images/添加模块按钮.png"  style="width: 300px;height: 150px;"  title="smart home">  
+<img src="./images/选择智能家居.png" style="width: 250px;height: 240px;"  title="smart home">   
+<img src="./images/选择小狮盒子.png" style="width: 300px;height: 250px;"  title="smart home"> 
 
 ## 小米网关灯
 
@@ -103,14 +104,14 @@
 
 ## 彩光灯LED灯泡
 
-| 指令                                                         | 功能                                         |
-| ------------------------------------------------------------ | -------------------------------------------- |
-| <img src="./images/扫描LED.png"  style="width: 200px;height: 70px;" title="smart home"> | 扫描客户端所在局域网下的所有彩光LED灯泡。    |
-| <img src="./images/打开关闭LED.png"  style="width: 250px;height: 70px;" title="smart home"> | 将彩光灯打开或关闭。                         |
-| <img src="./images/LED亮度.png"  style="width: 300px;height: 70px;" title="smart home"> | 设置彩光的亮度 。                            |
-| <img src="./images/LED颜色.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过调节彩光灯的RGB数值 ，改变彩光灯的颜色。 |
-| <img src="./images/LED色温.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过改变数值调节彩光灯的色温 。              |
-| <img src="./images/LED律动.png"  style="width: 400px;height: 50px;" title="smart home"> | 设置彩光灯的律动效果，并选择对应的律动次数。 |
+| 指令                                                         | 功能                                                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="./images/扫描LED.png"  style="width: 200px;height: 70px;" title="smart home"> | 扫描客户端所在局域网下的所有彩光LED灯泡。                    |
+| <img src="./images/打开关闭LED.png"  style="width: 250px;height: 70px;" title="smart home"> | 使用LED彩光灯指令时，需要先选择IP参数。<br />将彩光灯打开或关闭。 |
+| <img src="./images/LED亮度.png"  style="width: 300px;height: 70px;" title="smart home"> | 设置彩光的亮度 。                                            |
+| <img src="./images/LED颜色.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过调节彩光灯的RGB数值 ，改变彩光灯的颜色。                 |
+| <img src="./images/LED色温.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过改变数值调节彩光灯的色温 。                              |
+| <img src="./images/LED律动.png"  style="width: 400px;height: 50px;" title="smart home"> | 设置彩光灯的律动效果，并选择对应的律动次数。                 |
 
 | 案例                                                         | 参考程序                                           |
 | ------------------------------------------------------------ | -------------------------------------------------- |
