--- a/docs/米家智能设备添加步骤.md
+++ b/docs/米家智能设备添加步骤.md
@@ -10,6 +10,7 @@
 
 	1）米家APP需要安装6.0以下的版本，最新的米家安装包（6.0及以上）无法获取token，将无法使用局域网通信。
 	2）在手机应用商城或应用管理中关闭米家APP的自动更新，避免自动更新为最新版本。
+	3）米家APP下载链接: https://pan.baidu.com/s/15GeDpLBs7ynwEbtin_XGLw 提取码: rmtn
 
 # 添加网关步骤
 <img src="./images/配置小米网关.jpg"  style="width: 200px;height: 400px;" title="smart home"> 
