--- a/docs/机器人.md
+++ b/docs/机器人.md
@@ -26,6 +26,18 @@
 4.将外界摄像头通过USB连接电脑，再使用摄像头的时候就可以愉快地使用USB摄像头了。
 
 <br />
+### 泥巴机器人主机更新固件
+在百度网盘中下载更新固件安装包：链接https://pan.baidu.com/s/1bDCJ2ZaBDk4Dfq2xbzJmSQ提取码：vk9s 复制这段内容后打开百度网盘手机App，操作更方便哦
+更新方法：
+1.将泥巴机器人通过USB与电脑连接。
+2.打开新固件文件夹，找到flash文件，鼠标右击falsh文件，选择编辑。
+3.修改COM端口号，与设备管理器中的端口号保持一致。
+<img src="./images/泥巴机器人固件更新.png" style="width: 400px;height: 200px;" title="smart home"> 
+<img src="./images/泥巴机器人com端口.png" style="width: 400px;height: 300px;" title="smart home"> 
+### 泥巴机器人无法通过USB连接计算机
+1.需要在电脑中安装驱动，在百度网盘中下载：链接：https://pan.baidu.com/s/1NJhjjrZyIC74yKcVEJrpcw 提取码：yqcd 复制这段内容后打开百度网盘手机App，操作更方便哦
+2.下载完毕后双击打开文件夹中的setup文件，点击安装即可，若提示安装失败，点击卸载，重新安装。
+<img src="./images/泥巴机器人驱动.png" style="width: 400px;height: 250px;" title="smart home"> 
 
 ### 积木块说明
 ### 1. 当前连接状态
@@ -180,7 +192,7 @@
 	2.开机状态下长按按钮五秒以上进行无人机重置
 
 ### dlna设备发现说明  
-	
+
 	连接大疆WiFi，dlna可自动发现大疆无人机，点击建立与无人机的连接。
 #### dlna扫描发现
 
@@ -289,8 +301,8 @@
 先重置无人机，连接无人机自带的wifi，连接后扫描tello无人机,并通过左上角积木块连接到自己的局域网wifi（wifi名字和密码不能包含空格和下划线），之后将客户端网络切成自己的局域网wifi,通过多机版积木块重新扫描tello无人机，之后便可通过语音控制无人机起飞和降落等操作。
 ![tello_multi_sample](images/tello多机版/样例代码/tello_multi_sample.png "大疆无人机（多机版）")
 
-		
----  
+
+---
 ## 机甲大师
 ![robo_master](images/机甲大师/ext_robomaster.png)  
 ### 机甲大师介绍
@@ -466,7 +478,7 @@
 扫描连接机甲大师，控制机甲大师移动和机械臂移动。
 ![robo_master](images/机甲大师/样例代码/robo_master_sample.png "robo_master积木块1")
 
----  
+---
 ## 履带式小车
 ![sphero_rover](images/sphero/ext_sphero_rover.png)  
 ### 履带式小车介绍
@@ -479,7 +491,7 @@ sphero rvr
 
 ![sphero_rover](images/sphero/硬件说明/履带式小车.png)
 
-	
+​	
 
 ### 积木块说明
 ### 1. 开始连接小车
@@ -640,7 +652,7 @@ sphero rvr
 
 ### 样例代码  
 填写积木块上的IP地址连接小车，拉取“开启传感器”积木块。同时每隔1秒，说出“角度传感器”积木块，“速度传感器”积木块和“环境光传感器”积木块的值，点击小旗子运行。关闭传感器。 
- 
+
 ![sphero_rover](images/sphero/样例代码/sphero_rover_sample_13.png "spherorover示例12")
 
 <br />
@@ -654,7 +666,7 @@ sphero mini
 
 ![sphero_mini](images/spheromini/硬件说明/spheromini.png)
 
-	
+​	
 
 ### 积木块说明
 ### 1. 扫描迷你小球
