--- a/docs/人工智能.md
+++ b/docs/人工智能.md
@@ -238,3 +238,48 @@
 <img src="./images/图像分类案例.png"  style="width: 300px;height:300px;" title="image classification">
 
 参考案例说明：机器学习兔子的外观，并进入识别。当点击“绿旗”后，语音输入“rabbit”，如果当前机器学习后识别的结果为小兔子，播放胜利音效。
+
+## 图像识别pro
+ <img src="./images/图像识别连接.png"  style="width:350px;height:250px;" title="image classification">
+
+功能：添加图像识别模块，并连接小狮盒子。
+<hr>
+
+ <img src="./images/图像识别电脑摄像头.png"  style="width:170px;height:65px;" title="image classification">
+
+功能：通过电脑摄像头采集图片。
+<hr>
+
+ <img src="./images/图像识别手机摄像头.png"  style="width:250px;height:50px;" title="image classification">
+
+功能：通过手机摄像头采集图片。
+<hr>
+
+ <img src="./images/图像识别采集.png"  style="width:200px;height:60px;" title="image classification">
+
+功能：选择手机或者电脑进行图像采集。
+<hr>
+
+ <img src="./images/图像识别类别.png"  style="width:250px;height:160px;" title="image classification">
+
+功能：点击进行图像识别，可以选择的识别类别有：垃圾分类、动物分类、动漫人像分类、水果分类
+<hr>
+
+ <img src="./images/图像识别完成事件.png"  style="width:170px;height:90px;" title="image classification">
+
+功能：图像识别完成后执行对应的事件
+<hr>
+
+ <img src="./images/图像识别结果.png"  style="width:200px;height:70px;" title="image classification">
+
+功能：点击显示图像识别的结果
+<hr>
+
+ <img src="./images/图像识别案例.png"  style="width:300px;height:320px;" title="image classification">
+
+ <img src="./images/图像识别效果.png"  style="width:350px;height:300px;" title="image classification">
+
+案例说明：点击绿旗后，再按下空格键进行图像识别，识别完成后，舞台上的角色会将识别结果说出。
+
+<hr>
+
