--- a/docs/工具.md
+++ b/docs/工具.md
@@ -92,3 +92,49 @@
 连接服务器.点击小旗子，订阅话题hello，然后广播话题hello消息hello，MQTT收到广播消息触发，舞台上的角色说”hello“。
 
 ![mqtt](images/MQTT/示例代码/mqtt_sample_c.png)
+
+## 局域网通信
+ <img src="./images/局域网通信图标.png"  style="width:200px;height:180px;" title="image classification">
+
+### 局域网通信介绍
+	实时通信协议是物联网技术中的一项根本性技术,在数据的有效传输、及时通信方面不可或缺,在物联网领域发挥着至关重要的作用,因此物联网通信协议的制定至关重要，此功能需要连接小狮盒子，在局域网内进行通信。
+
+
+###  MQTT连接服务
+ <img src="./images/局域网通信连接盒子.png"  style="width:360px;height:270px;" title="image classification">
+
+打开小小创造家客户端，添加局域网通信模块，连接小狮盒子。
+<hr>
+
+ <img src="./images/局域网通信，连接服务.png"  style="width:360px;height:50px;" title="image classification">
+
+选择IP，连接MQTT服务。	
+<hr>
+
+ ![mqtt](images/MQTT/积木块说明/mqtt_book_take.png)
+
+需要接收某个消息时，要先输入话题名，进行订阅。  
+<hr>
+
+ ![mqtt](images/MQTT/积木块说明/mqtt_set_take.png)
+
+广播消息给订阅此消息的设备，注意订阅的消息名称和广播的话题名称需要一致	
+<hr>
+
+ ![mqtt](images/MQTT/积木块说明/mqtt_when.png)
+
+当收到与话题名相同的广播则触发对应事件
+<hr>
+
+ ![mqtt](images/MQTT/积木块说明/mqtt_take_content.png)
+
+点击显示收到的话题内容，即发出广播时的消息内容
+<hr>
+
+ <img src="./images/局域网通信案例2.png"  style="width:500px;height:250px;" title="image classification">
+
+ <img src="./images/局域网通信案例1.png"  style="width:360px;height:250px;" title="image classification">
+
+案例说明：当设备1发出话题“circle”时，设备2订阅并收到话题circle，角色转圈。
+
+<hr>
