--- a/docs/开源硬件.md
+++ b/docs/开源硬件.md
@@ -42,3 +42,96 @@
 通过超声波来测试距离。 
 
 ![arduino](images/arduino/积木块说明/arduino_ultrasound.png "arduino积木块5")   
+
+# micro:bit
+## micro:bit介绍
+<img src="./images/microbit介绍.png"  style="width: 600px;height:300px;" title="face recognition"> 
+
+micro:bit 是一款由英国广播电视公司（BBC）推出的专为青少年编程教育设计的微型电脑开发板，2016年3月6月，micro:bit 在英国全线铺开，BBC在线上线下配套了大量的项目教程资源和活动。BBC希望通过 micro:bit 驱动青少年参与到创造性的硬件制作和软件编程中去，而不是每天沉浸在各式的娱乐和消费中。
+micro:bit 的正面设计有两个按钮，5×5 LED点阵，反面设计有蓝牙天线，运动传感器，重置按键等。
+## 连接 micro:bit
+### 安装scratch link
+下载地址：https://downloads.scratch.mit.edu/link/windows.zip
+### 解决Scratch link无法连接问题：域名被污染
+需要修改本机 hosts 文件，host文件路径：
+Windows: C:\Windows\System32\drivers\etc\hosts
+Mac/Linux: /etc/hosts
+
+添加如下规则:127.0.0.1 device-manager.scratch.mit.edu
+
+ <img src="./images/host规则修改.png"  style="width: 600px;height: 350px;" title="face recognition"> 
+
+    注意：若无法修改host文件，可以先将host文件剪切到桌面上修改，修改完成后，再粘贴到etc目录下
+
+### 打开电脑蓝牙
+<img src="./images/蓝牙打开.png"  style="width: 450px;height: 350px;" title="face recognition" > 
+
+### 打开小小创造家客户端连接
+<img src="./images/运行scratchlink.png"  style="width: 150px;height: 350px;" title="face recognition" > 
+
+找到ScratchLink应用，双击运行
+<hr>
+
+<img src="./images/microbit连接.png"  style="width: 450px;height: 350px;" title="face recognition" > 
+
+添加microbit模块，并连接
+
+## 积木指令说明
+<img src="./images/microbit按键事件.png"  style="width: 200px;height: 80px;" title="face recognition" > 
+
+当按下micro:bit面板上的A、B或任意键时，触发对应的事件。
+<hr>
+
+<img src="./images/microbit按键条件.png"  style="width: 200px;height: 70px;" title="face recognition" > 
+
+判断是否按下A、B或任意键
+<hr>
+<img src="./images/microbit晃动移动抛起事件.png"  style="width: 180px;height: 150px;" title="face recognition" > 
+
+当micro:bit面板移动、晃动、抛起时，触发对应的事件
+<hr>
+
+<img src="./images/点阵屏图案显示.png"  style="width: 180px;height: 150px;" title="face recognition" > 
+
+设置micro:bit面板上的点阵图案
+<hr>
+
+<img src="./images/microbit显示文本.png"  style="width: 180px;height: 60px;" title="face recognition" > 
+
+设置micro:bit面板上的文字显示
+<hr>
+
+<img src="./images/microbit清空屏幕.png"  style="width: 120px;height: 60px;" title="face recognition" > 
+
+清空micro:bit面板上显示的文字和图案
+<hr>
+
+<img src="./images/microbit倾斜事件.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+
+当micro:bit面板向前、后、左、右或任意的方向倾斜时，触发对应的事件
+<hr>
+
+<img src="./images/microbit倾斜条件.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+
+判断当前micro:bit面板是否向前、后、左、右或任意的方向倾斜
+<hr>
+
+<img src="./images/microbit倾角值.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+
+当前micro:bit面板的各个方向的倾斜角
+<hr>
+
+<img src="./images/microbit连接引脚事件.png"  style="width: 210px;height: 160px;" title="face recognition" > 
+
+当连接micro:bit面板上的对应引脚时，触发对应事件
+<hr>
+
+<img src="./images/microbit案例1.png"  style="width: 210px;height: 220px;" title="face recognition" > 
+
+案例说明：当按下micro:bit面板上的A键时，点阵屏显示A，当按下micro:bit面板上的B键时，点阵屏显示B，
+<hr>
+<img src="./images/microbit案例2.png"  style="width: 210px;height: 230px;" title="face recognition" > 
+
+案例说明：当按下micro:bit面板向前倾时，点阵屏上显示forward，当按下micro:bit面板向后倾时，点阵屏上显示backwards
+
+<hr>
