--- a/docs/人工智能.md
+++ b/docs/人工智能.md
@@ -184,6 +184,30 @@
 参考案例说明：点击绿旗后，使用电脑摄像头进行文字识别，当文字识别完成后，如果识别的结果为cat，那么播放cat音效。
 
 ## 手势识别
+    支持的24类手势列表：拳头、OK、祈祷、作揖、作别、单手比心、点赞、Diss、我爱你、掌心向上、双手比心（3种）、数字（9种）、Rock、竖中指
+
+<img src="./images/手势1.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字2.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字3.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字4.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势five.png"  style="width: 150px;height: 150px;" title="gesture recognition">
+
+手势1-5
+<hr>
+<img src="./images/手势数字6.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字7.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字8.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势数字9.png"  style="width: 150px;height: 150px;" title="gesture recognition">  
+
+手势6-9
+<hr>
+<img src="./images/手势拳头.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势ok.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势祈祷.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势作揖.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势作别.png"  style="width: 150px;height: 150px;" title="gesture recognition">
+
+手势：拳头、OK、祈祷、作揖、作别
+<hr>
+<img src="./images/手势单手比心.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势点赞.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势diss.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势rock.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势掌心向上.png"  style="width: 150px;height: 150px;" title="gesture recognition">
+
+手势：单手比心、点赞、diss、rock、掌心向上
+<hr>
+<img src="./images/手势双手比心1.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势双手比心2.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势双手比心3.png"  style="width: 150px;height: 150px;" title="gesture recognition">  <img src="./images/手势竖中指.jpg"  style="width: 150px;height: 150px;" title="gesture recognition">
+
+手势：3种双手比心、竖中指
+<hr>
+
+## 指令说明
 
 <img src="./images/选择摄像头文字识别.png"  style="width: 200px;height: 50px;" title="gesture recognition"> 
 
