--- a/docs/机器人.md
+++ b/docs/机器人.md
@@ -1,4 +1,4 @@
-## 泥巴机器人
+## 小狮机器人
 ![niba](images/泥巴机器人/ext_niba_cog.png)
 
 
@@ -26,98 +26,91 @@
 4.将外界摄像头通过USB连接电脑，再使用摄像头的时候就可以愉快地使用USB摄像头了。
 
 <br />
-
-### 泥巴机器人主机更新固件
-
+### 小狮机器人主机更新固件
 在百度网盘中下载更新固件安装包：链接https://pan.baidu.com/s/1bDCJ2ZaBDk4Dfq2xbzJmSQ提取码：vk9s 复制这段内容后打开百度网盘手机App，操作更方便哦
-
 更新方法：
-1.将泥巴机器人通过USB与电脑连接。
-
+1.将小狮机器人通过USB与电脑连接。
 2.打开新固件文件夹，找到flash文件，鼠标右击falsh文件，选择编辑。
-
 3.修改COM端口号，与设备管理器中的端口号保持一致。
-
 <img src="./images/泥巴机器人固件更新.png" style="width: 400px;height: 200px;" title="smart home"> 
 <img src="./images/泥巴机器人com端口.png" style="width: 400px;height: 300px;" title="smart home"> 
 
-### 泥巴机器人无法通过USB连接计算机
-
+### 小狮机器人无法通过USB连接计算机
 1.需要在电脑中安装驱动，在百度网盘中下载：链接：https://pan.baidu.com/s/1NJhjjrZyIC74yKcVEJrpcw 提取码：yqcd 复制这段内容后打开百度网盘手机App，操作更方便哦
-
 2.下载完毕后双击打开文件夹中的setup文件，点击安装即可，若提示安装失败，点击卸载，重新安装。
-
 <img src="./images/泥巴机器人驱动.png" style="width: 400px;height: 250px;" title="smart home"> 
 
 ### 积木块说明
 ### 1. 当前连接状态
 点击积木块，得到当前连接状态。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_connect.png "泥巴1")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_connect.png "泥巴1")
 ### 2. USB配网SSID
-点击积木块，进行配网。
+将小狮机器人用USB线与电脑连接起来。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_connect_wifi.png "泥巴")
+分别填写SSID:电脑连接的WiFi名称，密码：WiFi密码。点击积木块，进行配网。
+
+ ![泥巴](images/泥巴机器人/积木块说明/niba_connect_wifi.png "泥巴")
 ### 3. 电池电量
 点击积木块，获取电池电量的值。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_elect.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_elect.png "泥巴")
 ### 4. 控制端口马达运行功率
 点击积木块，设置指定端口马达运行功率，默认为100。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_speech_motor.png "泥巴机器人")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_speech_motor.png "泥巴机器人")
 ### 5. 控制端口马达运行角度功率
 点击积木块，控制马达方向和功率。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_motor_speech.png "泥巴机器人")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_motor_speech.png "泥巴机器人")
 ### 6. A马达实时转速
 点击积木块，获得A马达实时转速。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_a_motor.png "泥巴机器人")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_a_motor.png "泥巴机器人")
 ### 7. B马达实时转速
 点击积木块，获得B马达实时转速。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_b_motor.png "泥巴机器人")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_b_motor.png "泥巴机器人")
 ### 8. C马达实时转速
 点击积木块，获得C马达实时转速。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_c_motor.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_c_motor.png "泥巴")
 ### 9. D马达实时转速
 点击积木块，获得D马达实时转速。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_d_motor.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_d_motor.png "泥巴")
 ### 11. 小车设置马达
 点击积木块，设置小车左右两个马达。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_car_motor.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_car_motor.png "泥巴")
 ### 12. 小车预设速度
 点击积木块，设置小车预设的速度。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_car_pre_speech.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_car_pre_speech.png "泥巴")
 ### 13. 小车（前进，后退，刹车）
 点击积木块，设置小车是前进，后退还是刹车.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_car_go_forword.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_car_go_forword.png "泥巴")
 ### 14. 小车转向差速
 点击积木块，设置小车转向差速。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_car_turn.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_car_turn.png "泥巴")
 ### 15. 设置在屏幕中显示内容
 点击积木块，设置在屏幕传感器。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_car_motor.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_car_motor.png "泥巴")
 ### 16. 设置LED颜色
 点击积木块，设置LED的颜色。
 
-![泥巴](images/泥巴机器人/积木块说明/niba_LED.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_LED.png "泥巴")
 ### 17. 超声波距离
 点击积木块，获得超声波距离.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_Ultrasound.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_Ultrasound.png "泥巴")
 ### 18. 灰度传感器照明
 点击积木块，设置灰度传感器照明颜色.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_greplight.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_greplight.png "泥巴")
 
 ### 19. 端口灰度
 点击积木块，获得灰度的值.  
@@ -126,12 +119,12 @@
 ### 20. 黑白阈值
 点击积木块，设置黑白阈值，默认值为500.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_black_white.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_black_white.png "泥巴")
 
 ### 21. 判断端口是否为黑
 点击积木块，判断是否为黑色.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_is_black.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_is_black.png "泥巴")
 ### 22. 判断端口是否为白
 点击积木块，判断是否为白色.  
 ![泥巴](images/泥巴机器人/积木块说明/niba_is_white.png "泥巴")
@@ -139,16 +132,17 @@
 点击积木块，通过灰度传感器照明判断是否为选择的颜色.   
 ![泥巴](images/泥巴机器人/积木块说明/niba_is_color.png "泥巴")
 ### 24. 设置端口为[输入，输出]
-点击积木块，设置端口为输入或者输出.   
-![泥巴](images/泥巴机器人/积木块说明/niba_set_com.png "泥巴")
+ 点击积木块，设置端口为输入或者输出.   
+![泥巴](images/泥巴机器人/积木块说明/niba_set_com.png "泥巴") 
+
 ### 25. 判断端口为输入电平
 点击积木块，判断端口是否为输入电平，若是，返回true. 
 
-![泥巴](images/泥巴机器人/积木块说明/niba_com_input.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_com_input.png "泥巴")
 ### 26. ADC
 点击积木块，设获得ADC数据.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_adc.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_adc.png "泥巴")
 
 ### 27. 判断触碰开关
 点击积木块，若按下传感器开关，返回1，没有按下开关，返回0.  
@@ -157,12 +151,12 @@
 ### 28. 响度
 点击积木块，获得声音响度的值.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_Loudness.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_Loudness.png "泥巴")
 
 ### 29. 温度
 点击积木块，通过传感器，获得温度的值.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_tem.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_tem.png "泥巴")
 ### 30. 湿度
 点击积木块，通过传感器，获得湿度的值.  
 ![泥巴](images/泥巴机器人/积木块说明/niba_rh.png "泥巴")
@@ -170,12 +164,12 @@
 ### 31. 压强
 点击积木块，通过传感器，获得压强的值.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_pa.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_pa.png "泥巴")
 
 ### 32. 海拔
 点击积木块，通过传感器，获得海拔的值.
 
-![泥巴](images/泥巴机器人/积木块说明/niba_high.png "泥巴")
+ ![泥巴](images/泥巴机器人/积木块说明/niba_high.png "泥巴")
 ### 33. 设置蜂鸣响度
 点击积木块，设置蜂鸣器响度.  
 ![泥巴](images/泥巴机器人/积木块说明/niba_voice.png "泥巴")
@@ -187,17 +181,17 @@
 ---  
 
 ## 大疆无人机（单机版）
-![tello_single](images/tello单机版/ext_tello_single.png)
+ ![tello_single](images/tello单机版/ext_tello_single.png)
 
 ### 大疆无人机（单机版）介绍
 	单机版模块通过连接大疆无人机自带wifi接入大疆无人机，对大疆无人机作起飞，降落，移动，翻转等一系列操作。
 
 ### 硬件说明
 
-
 大疆无人机   
 ![tello_single](images/tello单机版/硬件说明/tello.png)
 	
+
 	1.单击tello右侧按钮进行开机和关机
 	2.开机状态下长按按钮五秒以上进行无人机重置
 
