--- a/docs/开源硬件.md
+++ b/docs/开源硬件.md
@@ -2,6 +2,33 @@
 ![arduino](images/arduino/ext_arduino_cog.png)  
 ## gpioArduino介绍
     通过连接Arduino，Arduino板卡能够读取传感器的模拟或数字输入信号，并将其转换为输出，例如激活电机，打开/关闭LED多种操作。
+## Arduino通信固件烧入
+    小小创造家客户端与Arduino通信需要用到FirmataExpress库。
+1.下载安装Arduino IDE工具，下载地址：https://www.arduino.cc/en/software
+
+<img src="./images/ArduinoIDE下载1.png"  style="width: 400px;height:300px;" title="micro:bit">  <img src="./images/ArduinoIDE下载2.png"  style="width: 290px;height:200px;" title="Arduino"> 
+
+
+<hr>
+2.打开Arduino，选择工具-管理库安装FirmataExpress库、Ultrasonic库
+<img src="./images/FirmataExpress安装.png"  style="width: 500px;height:300px;" title="Arduino">
+ <img src="./images/Ultrasonic安装.png"  style="width: 500px;height:290px;" title="Arduino">
+ <hr>
+
+3.将Arduino连接电脑，在任务管理器中确认串行口，若连接电脑后，没有端口显示，需要在电脑中下载CH340驱动，在百度网盘中下载：链接：https://pan.baidu.com/s/1NJhjjrZyIC74yKcVEJrpcw 提取码：yqcd 复制这段内容后打开百度网盘手机App，操作更方便哦
+
+端口显示正常后，在Arduino-工具-端口中，勾选上对应的端口。
+
+<img src="./images/com端口显示.png"  style="width: 450px;height: 350px;" title="micro:bit" > 
+
+<hr>
+
+4.给Arduino硬件板子下载固件
+
+<img src="./images/select_firmata_express.png"  style="width: 350px;height: 450px;" title="micro:bit" > 
+<img src="./images/compile.png"  style="width: 350px;height: 300px;" title="micro:bit" > 
+
+<hr>
 
 ## 连接arduino
 ![arduino](images/arduino/scan_com_arduino.png)
@@ -45,7 +72,7 @@
 
 # micro:bit
 ## micro:bit介绍
-<img src="./images/microbit介绍.png"  style="width: 600px;height:300px;" title="face recognition"> 
+<img src="./images/microbit介绍.png"  style="width: 600px;height:300px;" title="micro:bit"> 
 
 micro:bit 是一款由英国广播电视公司（BBC）推出的专为青少年编程教育设计的微型电脑开发板，2016年3月6月，micro:bit 在英国全线铺开，BBC在线上线下配套了大量的项目教程资源和活动。BBC希望通过 micro:bit 驱动青少年参与到创造性的硬件制作和软件编程中去，而不是每天沉浸在各式的娱乐和消费中。
 micro:bit 的正面设计有两个按钮，5×5 LED点阵，反面设计有蓝牙天线，运动传感器，重置按键等。
@@ -59,78 +86,78 @@ Mac/Linux: /etc/hosts
 
 添加如下规则:127.0.0.1 device-manager.scratch.mit.edu
 
- <img src="./images/host规则修改.png"  style="width: 600px;height: 350px;" title="face recognition"> 
+ <img src="./images/host规则修改.png"  style="width: 600px;height: 350px;" title="micro:bit"> 
 
     注意：若无法修改host文件，可以先将host文件剪切到桌面上修改，修改完成后，再粘贴到etc目录下
 
 ### 打开电脑蓝牙
-<img src="./images/蓝牙打开.png"  style="width: 450px;height: 350px;" title="face recognition" > 
+<img src="./images/蓝牙打开.png"  style="width: 450px;height: 350px;" title="micro:bit" > 
 
 ### 打开小小创造家客户端连接
-<img src="./images/运行scratchlink.png"  style="width: 150px;height: 350px;" title="face recognition" > 
+<img src="./images/运行scratchlink.png"  style="width: 150px;height: 350px;" title="micro:bit" > 
 
 找到ScratchLink应用，双击运行
 <hr>
 
-<img src="./images/microbit连接.png"  style="width: 450px;height: 350px;" title="face recognition" > 
+<img src="./images/microbit连接.png"  style="width: 450px;height: 350px;" title="micro:bit" > 
 
 添加microbit模块，并连接
 
 ## 积木指令说明
-<img src="./images/microbit按键事件.png"  style="width: 200px;height: 80px;" title="face recognition" > 
+<img src="./images/microbit按键事件.png"  style="width: 200px;height: 80px;" title="micro:bit" > 
 
 当按下micro:bit面板上的A、B或任意键时，触发对应的事件。
 <hr>
 
-<img src="./images/microbit按键条件.png"  style="width: 200px;height: 70px;" title="face recognition" > 
+<img src="./images/microbit按键条件.png"  style="width: 200px;height: 70px;" title="micro:bit" > 
 
 判断是否按下A、B或任意键
 <hr>
-<img src="./images/microbit晃动移动抛起事件.png"  style="width: 180px;height: 150px;" title="face recognition" > 
+<img src="./images/microbit晃动移动抛起事件.png"  style="width: 180px;height: 150px;" title="micro:bit" > 
 
 当micro:bit面板移动、晃动、抛起时，触发对应的事件
 <hr>
 
-<img src="./images/点阵屏图案显示.png"  style="width: 180px;height: 150px;" title="face recognition" > 
+<img src="./images/点阵屏图案显示.png"  style="width: 180px;height: 150px;" title="micro:bit" > 
 
 设置micro:bit面板上的点阵图案
 <hr>
 
-<img src="./images/microbit显示文本.png"  style="width: 180px;height: 60px;" title="face recognition" > 
+<img src="./images/microbit显示文本.png"  style="width: 180px;height: 60px;" title="micro:bit" > 
 
 设置micro:bit面板上的文字显示
 <hr>
 
-<img src="./images/microbit清空屏幕.png"  style="width: 120px;height: 60px;" title="face recognition" > 
+<img src="./images/microbit清空屏幕.png"  style="width: 120px;height: 60px;" title="micro:bit" > 
 
 清空micro:bit面板上显示的文字和图案
 <hr>
 
-<img src="./images/microbit倾斜事件.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+<img src="./images/microbit倾斜事件.png"  style="width: 200px;height: 160px;" title="micro:bit" > 
 
 当micro:bit面板向前、后、左、右或任意的方向倾斜时，触发对应的事件
 <hr>
 
-<img src="./images/microbit倾斜条件.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+<img src="./images/microbit倾斜条件.png"  style="width: 200px;height: 160px;" title="micro:bit" > 
 
 判断当前micro:bit面板是否向前、后、左、右或任意的方向倾斜
 <hr>
 
-<img src="./images/microbit倾角值.png"  style="width: 200px;height: 160px;" title="face recognition" > 
+<img src="./images/microbit倾角值.png"  style="width: 200px;height: 160px;" title="micro:bit" > 
 
 当前micro:bit面板的各个方向的倾斜角
 <hr>
 
-<img src="./images/microbit连接引脚事件.png"  style="width: 210px;height: 160px;" title="face recognition" > 
+<img src="./images/microbit连接引脚事件.png"  style="width: 210px;height: 160px;" title="micro:bit" > 
 
 当连接micro:bit面板上的对应引脚时，触发对应事件
 <hr>
 
-<img src="./images/microbit案例1.png"  style="width: 210px;height: 220px;" title="face recognition" > 
+<img src="./images/microbit案例1.png"  style="width: 210px;height: 220px;" title="micro:bit" > 
 
 案例说明：当按下micro:bit面板上的A键时，点阵屏显示A，当按下micro:bit面板上的B键时，点阵屏显示B，
 <hr>
-<img src="./images/microbit案例2.png"  style="width: 210px;height: 230px;" title="face recognition" > 
+<img src="./images/microbit案例2.png"  style="width: 210px;height: 230px;" title="micro:bit" > 
 
 案例说明：当按下micro:bit面板向前倾时，点阵屏上显示forward，当按下micro:bit面板向后倾时，点阵屏上显示backwards
 
