--- a/docs/开源硬件.md
+++ b/docs/开源硬件.md
@@ -8,10 +8,9 @@
 
 <img src="./images/ArduinoIDE下载1.png"  style="width: 400px;height:300px;" title="micro:bit">  <img src="./images/ArduinoIDE下载2.png"  style="width: 290px;height:200px;" title="Arduino"> 
 
-
 <hr>
 2.打开Arduino，选择工具-管理库安装FirmataExpress库、Ultrasonic库
-<img src="./images/FirmataExpress安装.png"  style="width: 500px;height:300px;" title="Arduino">
+<img src="./images/FirmataExpress安装.PNG"  style="width: 500px;height:300px;" title="Arduino">
  <img src="./images/Ultrasonic安装.png"  style="width: 500px;height:290px;" title="Arduino">
  <hr>
 
