--- a/docs/客户端安装.md
+++ b/docs/客户端安装.md
@@ -1,10 +1,11 @@
 # 客户端安装
+    客户端需要在Win7 64位或者win10 64位电脑操作系统上安装。
     在安装客户端的过程中，如果出现询问是否允许访问的窗口，一律点击是，否则会影响使用。
 <img src="./images/点击安装包.png"  style="width: 120px;height: 110px;" title="client installation"> 
 
 1.点击小小创造家客户端安装包进行安装
-<hr>
 
+<hr>
 <img src="./images/开始安装客户端.png"  style="width: 400px;height: 300px;" title="client installation"> 
 
 2.点击开始安装客户端
